--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <br>
 <input class="bb" type="button" value="Confirm"  onclick="next1();"/>
 <br>
-<input class="bb" type="button" value="Tiwi show"  onclick="hd();"/>
-<input class="bb" type="button" value="English show"  onclick="engvis();"/>
+<input class="bb" type="button" value="Hebrew show"  onclick="hd();"/>
+<input class="bb" type="button" value="Greek show"  onclick="engvis();"/>
 <br>
 <input class="bb" type="button" value="Forward"  onclick="fd();"/>
 <input class="bb" type="button" value="Back"  onclick="bk1();"/>
